--- a/demo/index.html
+++ b/demo/index.html
@@ -3,18 +3,30 @@
 	<head>
 		<meta charset=utf-8 />
 		<title>Proform Demo</title>
+		<link rel="stylesheet" type="text/css" href="default.css">
 	</head>
 	<body>
 		<h1>Proform Demo</h1>
 		
 		<form class="proform">
 			<div>	<!-- Input container -->
+				<div>Postcode:</div>
 				<input type="text" name="postcode" placeholder="Enter a UK postcode" data-pf-mandatory data-pf-validator="uk-postcode" data-error-container="#error-postcode" data-hint-container="#hint-postcode">
 				<div id="hint-postcode" class="hint-container"></div>
 				<div id="error-postcode" class="error-container"></div>
 			</div>
 			<div>	<!-- Input container -->
-				<input type="text" name="telephone" placeholder="Enter a UK telephone" data-pf-pattern="/^\+?[0-9 ()]{7,12}$/i" data-error-container="#error-telephone" data-hint-container="#hint-telephone">
+				<div>Do you have a telephone:</div>
+				<select name="has-telephone" >
+					<option data-pf-state-set="telephone=y">Yes</option>
+					<option data-pf-state-set="telephone=n">No</option>
+				</select>
+				<div id="hint-telephone" class="hint-container"></div>
+				<div id="error-telephone" class="error-container"></div>
+			</div>
+			<div data-pf-state-watch="telephone=y">	<!-- Input container -->
+				<div>Telephone number:</div>
+				<input type="text" name="telephone" placeholder="Enter a UK telephone" data-pf-validator="uk-telephone" data-error-container="#error-telephone" data-hint-container="#hint-telephone">
 				<div id="hint-telephone" class="hint-container"></div>
 				<div id="error-telephone" class="error-container"></div>
 			</div>
@@ -30,7 +42,7 @@
 		<script type="text/javascript" src="../lib/proform-lang-en-gb.js"></script>
 		<script>
 			$( document ).ready( function() {
-						
+				
 				$( '.error-container' ).hide();
 				$( '.hint-container' ).hide();
 
